--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">SingersApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="number_of_reproductions">Number of reproductions: %1$s</string>
+    <string name="enter_text_here">Enter text here!</string>
+    <string name="search">Search</string>
+    <string name="error_null_mbid">Oops, It has not been possible to obtain the mbid of this artist</string>
+    <string name="open_url">Open url</string>
+    <string name="top_albums">Top Albums</string>
+    <string name="no_info">Artist without data</string>
+    <string name="something_went_wrong">Oops… Something went wrong, the information could not be loaded</string>
 </resources>
