--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="no_info">Artist without data</string>
     <string name="something_went_wrong">Oops… Something went wrong, the information could not be loaded</string>
     <string name="could_not_load_content">Content could not be loaded</string>
+    <string name="retry">Retry</string>
 </resources>
